added background gradient and updated the page head title

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+background-image: radial-gradient(circle, aliceblue 90%, silver 10%)
+
+
 #titlebox {
   background-color: #474646;
   width: 800px;
