--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   vertical-align: middle;
   line-height: 10px;
   font-size: 20px;
-  font-family: arial, serif;
+  font-family: heebo, sans-serif;
 }
 
 #pg2titlebox {
@@ -27,18 +27,18 @@
   text-align: left;
   line-height: 100px;
   font-size: 30px;
-  font-family: arial, serif;
+  font-family: heebo, sans-serif;
 }
 
 #pg2shitlist {
 font-size: 18px;
-  font-family: arial, serif;
+  font-family: heebo, sans-serif;
 margin: 15px;
 }
 
 #webtitle {
   color: white;
-  font-family: arial, serif;
+  font-family: heebo, sans-serif;
 }
 #websubtit {
   color: white;
@@ -56,12 +56,12 @@ margin: 15px;
 #p2webtitle {
   color: white;
   font-size: 20px;
-  font-family: arial, serif;
+  font-family: heebo, sans-serif;
 
 }
 
 body {
   font-size: 18px;
-  font-family: arial, serif;
-    background-image: radial-gradient(circle, aliceblue 90%, silver 10%);
+  font-family: heebo, sans-serif;
+    background-image: linear-gradient(90deg,lightgray,floralwhite,lightgray );
 }
