--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@ footer {
         display: flex;
         background: radial-gradient(1190.00px at 50% -10.19%, #26D1FF 0%, #087CA7 100%);
         mix-blend-mode: normal;
+        background-attachment: fixed;
 
 
     }
@@ -199,9 +200,15 @@ footer {
 
 /*-----Portfolio Page CSS-----*/
 
-#portbody{
-    background-image: url("images/footer-vector.svg") no-repeat;
-    background-attachment: fixed;
+
+#vector {
+    position: absolute;
+    top: 70%;
+    right: -40%;
+    transform: rotate(270deg);
+    z-index: 0;
+    margin: 0;
+    padding: 0;
 }
 
 #port{
