--- a/style.css
+++ b/style.css
@@ -261,3 +261,12 @@ footer {
     margin: 20px;
 
 }
+
+@media screen (max-width: 1670px) {
+
+    .portboxes {
+        display: grid;
+        order: 4;
+        grid-template-columns: auto;
+    }
+}
