--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ footer {
 
 #carousel{
     width: 100%;
-    background-color: #CED3DC;
+    background-color: #4a4a4aab;
     padding: 0;
     order: 3;
     margin: 300px auto;
